--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -11,16 +11,16 @@
 
 <form id="processingForm">
     <label for="textInput">Enter Text:</label>
-    <textarea id="textInput" name="text" rows="4" cols="50"></textarea>
+    <textarea id="textInput" name="text" rows="20" cols="150"></textarea>
 
     <label>
-        <input type="checkbox" name="options" value="Урок 1"> Option 1
+        <input type="checkbox" name="options" value="lesson_1"> Урок 1
     </label>
     <label>
-        <input type="checkbox" name="options" value="Урок 2"> Option 2
+        <input type="checkbox" name="options" value="lesson_2"> Урок 2
     </label>
     <label>
-        <input type="checkbox" name="options" value="Урок 3"> Option 3
+        <input type="checkbox" name="options" value="lesson_3"> Урок 3
     </label>
 
     <button type="button" onclick="processText()">Process Text</button>
