Front beta - finishing touches 2

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -112,6 +112,15 @@
         </div>
     </div>
 
+    <!--    <label for="fileInput">Загрузить файл:</label>-->
+
+    <!-- Обновленная кнопка загрузки файла -->
+    <label class="custom-file-upload">
+        <input type="file" id="fileInput" name="fileInput" >
+    </label>
+    <div class="custom-file-upload-text" id="fileText"></div>
+    <button type="button" onclick="processFile()">Загрузить</button>
+
     <label for="textInput">Текст:</label>
     <textarea id="textInput" name="text" rows="20" cols="150"></textarea>
 
