Front beta - T expanded

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -100,6 +100,9 @@
                 <input type="checkbox" name="options" value="consonants_altpkt"> П, К, Т с придыханием (Փփ Քք Թթ)
             </label>
             <label>
+                <input type="checkbox" name="options" value="consonants_vowel_pkt"> пока только Т
+            </label>
+            <label>
                 <input type="checkbox" name="options" value="consonants_softt"> Ծծ для мягкой Т
             </label>
             <label>
