file up-down-load txt and epub

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -123,6 +123,7 @@
     </label>
     <div class="custom-file-upload-text" id="fileText"></div>
     <button type="button" onclick="processFile()">Загрузить</button>
+    <button type="button" onclick="processAndDownload()">Скачать</button>
 
     <label for="textInput">Текст:</label>
     <textarea id="textInput" name="text" rows="20" cols="150"></textarea>
