file up-down-load txt and epub - front

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -119,7 +119,7 @@
 
     <!-- Обновленная кнопка загрузки файла -->
     <label class="custom-file-upload">
-        <input type="file" id="fileInput" name="fileInput" >
+        <input type="file" id="fileInput" name="fileInput" accept=".txt, .epub">
     </label>
     <div class="custom-file-upload-text" id="fileText"></div>
     <button type="button" onclick="processFile()">Загрузить</button>
