--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -25,142 +25,9 @@
 
     <div class="dropdown">
     <div class="dropdown-content">
-        <div class="topic">
-			<div class = "topic-title">
-            Самоучитель Сусанна Тиоян et al.
-			</div>
-			<div class="content">
+        <div id="topicsContainer"></div>
 
-            <div class="column">
-
-            <label>
-                <input type="checkbox" name="options" value="lesson_1"> Урок 1 - Աա ՈՒու Բբ Պպ Գգ Կկ Դդ Տտ Րր Լլ Մմ Նն
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_1a"> Только Աա ՈՒու
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_1b"> Только Բբ Գգ Դդ
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_1c"> Только Պպ Կկ Տտ
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_1d"> Только Րր Լլ Մմ Նն
-            </label>
-
-            <label>
-                <input type="checkbox" name="options" value="lesson_2"> Урок 2 - Իի Յյ Խխ Շշ Ժժ Չչ Սս Զզ Ցց Ֆֆ Վվ
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_2a"> Только Իի Յյ
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_2b"> Только Խխ Շշ Չչ Ցց
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_2c"> Только Ժժ Սս Զզ
-            </label>
-            <label>
-                &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="options" value="lesson_2d"> Только Ֆֆ Վվ
-            </label>
-
-        </div>
-        <div class="column">
-
-            <label>
-                <input type="checkbox" name="options" value="lesson_3"> Урок 3 - Եե Էէ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_4"> Урок 4 - և Օօ Ոո
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_5"> Урок 5 - Հհ Ղղ Ռռ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_6"> Урок 6 - Ըը (Ы)
-            </label>
-
-<!--            </div>-->
-<!--        <div class="column">-->
-
-            <label>
-                <input type="checkbox" name="options" value="lesson_7"> Урок 7 - Փփ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_8"> Урок 8 - Քք
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_9"> Урок 9 - Թթ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_10"> Урок 10 - Ձձ Ծծ (ДЗ, ТЬ)
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="lesson_11"> Урок 11 - Ջջ Ճճ (ДЖ, Щ)
-            </label>
-        </div>
-        </div>
-        </div>
-
-        <div class="topic">
-			<div class = "topic-title">
-            Наборы букв
-			</div>
-			<div class="content">
-
-            <div class="column">
-            <label>
-                <input type="checkbox" name="options" value="vowels"> Гласные - Աա ՈՒու Իի Էէ Եե Օօ Ոո
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="vowels_j"> Я, Ё, Ю с Յ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="vowels_vojev"> Ո как "во" в начале слова, և
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="vowels_bI"> Ы -> Ըը
-            </label>
-
-            </div>
-            <div class="column">
-
-            <label>
-                <input type="checkbox" name="options" value="consonants"> Согласные - Բբ Պպ Գգ Կկ Դդ Տտ Րր Լլ Մմ Նն Յյ Խխ Շշ Ժժ Չչ Սս Զզ Ցց Ֆֆ Վվ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_altr"> Ռռ вместо Րր (ближе к русской Р)
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_both_rs"> Использовать Րր и Ռռ, Րր для мягкой Р
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_altg"> Ղղ вместо Գգ (южный говор!)
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_alth"> Х как Հհ вместо Խխ
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_altpkt"> П, К, Т с придыханием (Փփ Քք Թթ)
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_vowel_pkt"> Պպ Կկ Տտ перед гласными, иначе Փփ Քք Թթ
-            </label>
-
-            <label>
-                <input type="checkbox" name="options" value="consonants_softt"> Ծծ для мягкой Т
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_dzs"> Ձձ Ջջ (для дж хороши тексты про Джорджа и Джин)
-            </label>
-            <label>
-                <input type="checkbox" name="options" value="consonants_tsch"> Щ -> Ճ (на самом деле звучит как ТШ!)
-            </label>
-
-        </div>
-    </div>
-    </div>
+        <script src="sets_menu.js"></script>
     </div>
     </div>
     </div>
