epub2txt correction, front polishing

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+<div id="processingMessage">Файл обрабатывается...</div>
 
 <form id="processingForm">
 
@@ -53,4 +54,6 @@
 </form>
 
 </body>
+
+
 </html>
