epub2txt correction, front polishing

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Конвертор текстов Арм</title>
+    <title>Тренажер армянского алфавита</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 
 <header>
                     <h1>Аրմяնский коնвеրтоր текстов</h1>
-                </header>
+</header>
 
 
 <body>
@@ -19,6 +19,7 @@
 <div id="processingMessage">Файл обрабатывается...</div>
 
 <form id="processingForm">
+
 
 
     <div class="options-container">
